# MidiMaker

./: .gitignore  CMakeLists.txt  MidiMakerKJB.sln  MidiMakerKJB.vcxproj  MidiMakerKJB.vcxproj.filters  README.md
src/: FFT.c  FFT.h  MIDIHandler.c  MIDIHandler.h  frequencyHandler.c  frequencyHandler.h  global.c  global.h  gtk.c  gtk.h  gui.c  gui.h  main.c  mainFunctions.c  mainFunctions.h  notes.c  notes.h  stdintgcc.h  wavHandler.c  wavHandler.h
tests/: mainTests.c  testFFT.c  testFFT.h  testFile_fftData_440Hz.txt  testFile_notAWavFile.txt  testFile_power_spectrum_440Hz.txt  testFile_samples_440Hz.txt  testFrequencyHandler.c  testFrequencyHandler.h  testMidi.c  testMidi.h  testNotes.c  testNotes.h  testWavHandler.c  testWavHandler.h
